; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_dlmglue.c_lockres_add_mask_waiter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_dlmglue.c_lockres_add_mask_waiter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocfs2_lock_res = type { i32, i32 }
%struct.ocfs2_mask_waiter = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ocfs2_lock_res*, %struct.ocfs2_mask_waiter*, i64, i64)* @lockres_add_mask_waiter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lockres_add_mask_waiter(%struct.ocfs2_lock_res* %0, %struct.ocfs2_mask_waiter* %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.ocfs2_lock_res*, align 8
  %6 = alloca %struct.ocfs2_mask_waiter*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.ocfs2_lock_res* %0, %struct.ocfs2_lock_res** %5, align 8
  store %struct.ocfs2_mask_waiter* %1, %struct.ocfs2_mask_waiter** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.ocfs2_mask_waiter*, %struct.ocfs2_mask_waiter** %6, align 8
  %10 = getelementptr inbounds %struct.ocfs2_mask_waiter, %struct.ocfs2_mask_waiter* %9, i32 0, i32 2
  %11 = call i32 @list_empty(i32* %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = call i32 @BUG_ON(i32 %14)
  %16 = load %struct.ocfs2_lock_res*, %struct.ocfs2_lock_res** %5, align 8
  %17 = getelementptr inbounds %struct.ocfs2_lock_res, %struct.ocfs2_lock_res* %16, i32 0, i32 1
  %18 = call i32 @assert_spin_locked(i32* %17)
  %19 = load %struct.ocfs2_mask_waiter*, %struct.ocfs2_mask_waiter** %6, align 8
  %20 = getelementptr inbounds %struct.ocfs2_mask_waiter, %struct.ocfs2_mask_waiter* %19, i32 0, i32 2
  %21 = load %struct.ocfs2_lock_res*, %struct.ocfs2_lock_res** %5, align 8
  %22 = getelementptr inbounds %struct.ocfs2_lock_res, %struct.ocfs2_lock_res* %21, i32 0, i32 0
  %23 = call i32 @list_add_tail(i32* %20, i32* %22)
  %24 = load i64, i64* %7, align 8
  %25 = load %struct.ocfs2_mask_waiter*, %struct.ocfs2_mask_waiter** %6, align 8
  %26 = getelementptr inbounds %struct.ocfs2_mask_waiter, %struct.ocfs2_mask_waiter* %25, i32 0, i32 0
  store i64 %24, i64* %26, align 8
  %27 = load i64, i64* %8, align 8
  %28 = load %struct.ocfs2_mask_waiter*, %struct.ocfs2_mask_waiter** %6, align 8
  %29 = getelementptr inbounds %struct.ocfs2_mask_waiter, %struct.ocfs2_mask_waiter* %28, i32 0, i32 1
  store i64 %27, i64* %29, align 8
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @list_empty(i32*) #1

declare dso_local i32 @assert_spin_locked(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
